--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,29 +1,32 @@
 .contactsList {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
 }
 
 .contactItem {
   font-family: 'Spartan', sans-serif;
   font-weight: 500;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 15px;
 }
 .contactTel {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 8px;
+  margin-right: 8px;
   font-weight: 700;
 }
+
 .button {
+  position: relative;
   cursor: pointer;
-  font-family: 'Grechen Fuemen', cursive;
-  font-size: 19px;
-  padding: 3px 19px;
+  font-size: 0px;
+  padding: 3px 3px;
   border: none;
-  -webkit-border-radius: 1px;
-  -moz-border-radius: 1px;
-  border-radius: 1px;
-  color: #fff;
+  width: 32px;
+  height: 32px;
+  border-radius: 3px;
   background-color: #f09d75;
   -webkit-box-shadow: 3px 2px 8px -1px #000000;
   box-shadow: 3px 2px 8px -1px #000000;
@@ -35,4 +38,41 @@
   background-color: #899ad0;
   transition: background-color 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   color: #000;
+}
+
+.button::after {
+  content: '';
+  display: block;
+  background: url('../../pictures/icons/bin.png') no-repeat;
+  background-size: contain;
+  width: 18px;
+  height: 18px;
+  float: right;
+  margin: 0 6px 0 0;
+  position: absolute;
+  top: 6px;
+  right: 1px;
+}
+
+@media screen and (min-width: 768px) {
+  .contactsList {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .button {
+    cursor: pointer;
+    font-family: 'Grechen Fuemen', cursive;
+    width: auto;
+    height: auto;
+    font-size: 19px;
+    padding: 3px 19px;
+    border-radius: 1px;
+    color: #fff;
+  }
+
+  .button::after {
+    display: none;
+  }
 }
