--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -11,7 +11,13 @@
   font-weight: 500;
   text-align: right;
   padding: 5px;
-  width: 300px;
+  width: 100%;
   margin-top: 10px;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .inputForm {
+    width: 300px;
+  }
 }
