--- a/src/App.module.css
+++ b/src/App.module.css
@@ -29,6 +29,7 @@ form {
 @media screen and (min-width: 768px) {
   .container {
     max-width: 1024px;
+    min-height: 1000px;
     background-image: url('./pictures/Bg3.png');
     background-repeat: no-repeat;
     background-size: contain;
